2009-08-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Speed up expansion into series.
	* src/algebra/fs2ups.spad.pamphlet: powerToGenUPS(),
	atancotToGenUPS(): use iExprToGenUPS instead of
	exprToGenUPS.

2009-08-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/cra.spad.pamphlet,
	src/algebra/pfo.spad.pamphlet,
	src/algebra/fs2ups.spad.pamphlet,
	src/algebra/lodop.spad.pamphlet,
	src/algebra/crfp.spad.pamphlet:  Update comments.

2009-08-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-coerce.boot, src/interp/rulesets.boot,
	src/interp/compiler.boot, src/interp/termrw.boot,
	src/interp/i-funsel.boot, src/interp/i-resolv.boot,
	src/interp/clammed.boot: Resolve cleanup.

2009-08-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/modring.spad.pamphlet: Always use monicDivide
	from underlying domain for remainder.

2009-08-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/muldep.spad.pamphlet,
	src/interp/nlib.lisp, src/interp/sys-pkg.lisp,
	src/interp/i-syscmd.boot, src/interp/interop.boot,
	src/interp/g-timer.boot, src/interp/macros.lisp,
	src/interp/lisplib.boot, src/interp/vmlisp.lisp,
	src/interp/spad.lisp: Misc cleanups.
	src/interp/cfuns.lisp: Remove
	src/interp/Makefile.in: Adjust.

2009-08-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/incl.boot: Fix conditionals in interpreter
	scanner.

2009-08-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/macros.lisp: ORDER?(): Avoid 'write-to-string'
	to make more efficient.

2009-08-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/clam.boot: clearClam(): Avoid using eval.

2009-08-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Generate fricas-cpl.el at build time.
	* contrib/emacs/gen-cpl.lisp: New file.
	contrib/emacs/fricas-cpl.lisp: Delete. Move first
	and last part to contrib/emacs/fricas-cpl.hd
	and contrib/emacs/fricas-cpl.tl respectively.
	Makefile.in, contrib/emacs/Makefile.in: Adjust.
