@@ -634,7 +634,8 @@ compExpand(x) ==
     ATOM(x) => x
     x is ["QUOTE",:.] => x
     x is ["SPADREDUCE", op, axis, body] =>
-       compExpand(expandSPADREDUCE(op, axis, body))
+       axis ~= 0 => BREAK()
+       compExpand(expandSPADREDUCE(op, body))
     MEMQ(CAR x, $COMP_-MACROLIST) => compExpand (MACROEXPAND_-1 (x))
     a := compExpand (car x)
     b := compExpand (cdr x)
