@@ -1,5 +1,11 @@
 2009-08-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/interp/def.lisp, src/interp/i-output.boot,
+	src/interp/g-boot.boot, src/interp/macros.lisp:
+	Misc cleanups.
+
+2009-08-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	Speed up expansion into series.
 	* src/algebra/fs2ups.spad.pamphlet: powerToGenUPS(),
 	atancotToGenUPS(): use iExprToGenUPS instead of
